[package]
name = "map"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo="0.12.2"
geo-types ="0.4.3"
serde = "~1.0"
serde_json = "~1.0"
url = "2.1.0"
chrono = "0.4.10"
reqwest = { version = "0.10.0", features = ["blocking", "json"] }